feat:adjust api activity
