# docs/swagger.json
@@ -1,13 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Backend service untuk konsumsi API dan Dashboard Analitik.",
-        "title": "API Analitik Publik",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
         "/api/activity": {
             "get": {
@@ -386,6 +381,34 @@
                 }
             }
         },
+        "/api/wilayah": {
+            "get": {
+                "description": "Mengambil data wilayah untuk dropdown search",
+                "tags": [
+                    "Wilayah"
+                ],
+                "summary": "Daftar Wilayah (ADM4)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cari kode atau nama wilayah",
+                        "name": "q",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Wilayah"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Endpoint untuk memastikan backend berjalan lancar",
@@ -415,32 +438,19 @@
             "type": "object",
             "properties": {
                 "activity_date": {
-                    "description": "Tanggal dan Jam kegiatan",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2026-02-27T10:00:00Z"
                 },
                 "area_code": {
-                    "description": "Relasi ke Wilayah.Code (adm4)",
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "31.71.01.1001"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
-                    "description": "Nama kegiatan (misal: \"Meeting Telkom\")",
-                    "type": "string"
-                },
-                "sync_time": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "weather_status": {
-                    "description": "Akan diisi otomatis oleh sistem",
-                    "type": "string"
+                    "type": "string",
+                    "example": "Rapat Koordinasi"
                 }
             }
         },
@@ -501,6 +511,23 @@
                 "ws": {
                     "description": "Kecepatan Angin",
                     "type": "number"
+                }
+            }
+        },
+        "models.Wilayah": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "loc": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         }
